--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "private": true,
   "name": "js13k-boilerplate",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "JS13KGames boilerplate",
   "author": "Florent Cailhol <florent.cailhol@gmail.com>",
   "license": "MIT",
   "repository": "ooflorent/js13k-boilerplate",
   "devDependencies": {
-    "browserify": "^5.9.1",
+    "browserify": "^5.10.0",
+    "bundle-collapser": "^1.1.0",
     "chalk": "^0.5.1",
     "commander": "^2.3.0",
-    "gulp": "^3.8.6",
+    "gulp": "^3.8.7",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.3.4",
     "gulp-cssmin": "^0.1.6",
     "gulp-eslint": "^0.1.8",
     "gulp-htmlmin": "^0.1.3",
     "gulp-if": "^1.2.4",
-    "gulp-less": "^1.3.2",
+    "gulp-less": "^1.3.3",
     "gulp-micro": "^1.0.0",
     "gulp-size": "^1.0.0",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
-    "gulp-zip": "^0.4.0",
+    "gulp-zip": "^1.0.0",
     "rimraf": "^2.2.8",
     "vinyl-source-stream": "^0.1.1"
   }
