--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "js13k-boilerplate",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "JS13KGames boilerplate",
   "author": "Florent Cailhol <florent.cailhol@gmail.com>",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "bundle-collapser": "^1.1.0",
     "chalk": "^0.5.1",
     "commander": "^2.3.0",
+    "express": "^4.8.0",
     "gulp": "^3.8.7",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.3.4",
@@ -26,5 +27,11 @@
     "gulp-zip": "^1.0.0",
     "rimraf": "^2.2.8",
     "vinyl-source-stream": "^0.1.1"
+  },
+  "scripts": {
+    "build": "gulp build --prod",
+    "dist": "gulp dist",
+    "start": "gulp watch serve",
+    "test": "gulp lint"
   }
 }
